--- a/app/src/main/res/layout/main_people_fragment.xml
+++ b/app/src/main/res/layout/main_people_fragment.xml
@@ -18,29 +18,78 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.061" />
 
-    <LinearLayout
-        android:layout_height="match_parent"
+    <GridLayout
+        android:id="@+id/linlayout"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="50dp"
-        android:orientation="vertical">
+        android:orientation="horizontal"
+        android:columnCount="2"
+        android:rowCount="5"
+        app:layout_constraintTop_toBottomOf="@id/message"
+        tools:layout_editor_absoluteX="50dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="알림 설정"
+            android:textSize="17dp"
+            android:layout_column="0"
+            android:layout_row="0"
+            />
         <Switch
             android:id="@+id/alram_chk"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="알람 설정"
             android:textSize="17dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="10dp" />
-        <Spinner
-            android:text="알람 설정"
+            android:layout_column="1"
+            android:layout_marginLeft="10dp"
+            android:layout_row="0"/>
+
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/alram_type"
-            android:entries="@array/type_of_alram"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="20dp"
+            android:text="알림 방법"
+            android:textSize="17dp"
+            android:layout_column="0"
+            android:layout_row="1"/>
+        <Spinner
+            android:id="@+id/alram_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="20dp"
+            android:entries="@array/type_of_alram"
             android:scrollbarSize="15dp"
-            />
+            android:text="알람 설정"
+            android:layout_column="1"
+            android:layout_row="1"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="20dp"
+            android:text="방해 금지 시간"
+            android:textSize="17dp"
+            android:layout_column="0"
+            android:layout_row="2"/>
+        <Switch
+            android:id="@+id/no_alram"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="17dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_column="1"
+            android:layout_row="2"/>
+    </GridLayout>
 
 
-    </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
