--- a/app/src/main/res/layout/main_yongd_fragment.xml
+++ b/app/src/main/res/layout/main_yongd_fragment.xml
@@ -18,5 +18,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.043" />
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/message"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:id="@+id/list_view"
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
