--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -11,6 +11,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/Title"
+        app:layout_constraintBottom_toBottomOf="@+id/Title"
+        android:id="@+id/list_layout"
         android:layout_marginLeft="30dp">
         <ImageView
             android:id="@+id/square"
@@ -39,25 +41,15 @@
         android:layout_height="wrap_content"
         android:id="@+id/Title"
         android:gravity="center"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/list_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="30dp"
         android:text="This is Title"
         android:textColor="@color/colorPrimaryDark"
         tools:ignore="MissingConstraints"
+        android:ems="10"
         android:textSize="18dp"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/Title"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="4dp"
-        android:id="@+id/Content"
-        android:text="This is Content"
-        android:textSize="13dp"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
